<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/ad_signUp"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edSignEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/di_email"
        android:inputType="textWebEmailAddress"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/di_password"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/edSignEmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/btSignUp_In"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/di_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edPassword"
        app:layout_constraintStart_toStartOf="@+id/edPassword"
        app:layout_constraintTop_toBottomOf="@+id/edPassword"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btForgot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/di_forgot"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edSignEmail"
        app:layout_constraintStart_toStartOf="@+id/edSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btSignUp_In" />
</androidx.constraintlayout.widget.ConstraintLayout>